# EventStoreDB-Client-Rust

./: Cargo.toml
examples/: quickstart.rs  reading_events.rs  server_side_filtering.rs  subscribing_to_stream.rs
src/: client.rs  commands.rs  lib.rs  types.rs
src/discovery/: cluster.rs
src/internal/: driver.rs  messages.rs  operations.rs  package.rs  registry.rs
tests/: integration.rs
