[package]
name = "eventstore"
version = "0.8.1"
authors = ["Yorick Laupa <yo.eight@gmail.com>"]
edition = "2018"

# Uncomment if you want to update messages.rs code-gen.
# We disabled codegen.rs because it requires having `protoc` installed on your machine
# in order to build that library.
build = "codegen.rs"

license = "MIT"
description = "EventStore TCP client"
repository = "https://github.com/YoEight/eventstore-rs"
readme = "README.md"
keywords = ["database", "eventsourcing", "event", "eventstore", "ges"]
exclude = [
  ".gitignore",
  ".gitlab-ci.yml",
  ".travis.yml",
  ".github",
  "rustfmt.toml"
]

categories = ["database", "api-bindings"]

[features]
default = []
es6 = [
  "byteorder",
  "http",
  "tonic",
  "prost",
  "prost-derive",
  "prost-types",
  "rustls",
  "webpki",
  "base64"
]
tls = [
    "tokio-rustls",
    "rustls",
    "webpki"
]

[dependencies]
tokio = { version = "1", features = ["net", "time"] }
tokio-byteorder = "0.3"
futures = "0.3"
uuid = { version  = "0.8", features = [ "v4", "serde" ] }
bytes = "1"
protobuf = { version = "2.22", features = ["with-bytes"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
vec1 = "1.4"
rand = { version = "0.8", features = ["getrandom", "small_rng"] }
byteorder = { version = "1.3", optional = true }
http = { version = "0.2", optional = true }
tonic = { version = "0.3", features = ["tls", "tls-roots"], optional = true }
prost = { version = "0.6", optional = true }
prost-derive = { version = "0.6", optional = true }
prost-types = { version = "0.6", optional = true }
rustls = { version = "0.18", features = ["dangerous_configuration"], optional = true }
webpki = { version = "0.21", optional = true }
base64 = { version = "^0.11", optional = true }
tokio-rustls = { version = "0.14", optional = true }
trust-dns-resolver = "0.20"

[build-dependencies]
protoc-rust = "2.16"
tonic-build = "0.2"

[[test]]
name = "integration"

[dev-dependencies]
env_logger = "0.8"
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
